docs/0.7/_sources/api/gammapy.catalog.SourceCatalogObject3FGL.rst.txt
SourceCatalogObject3FGL
=======================

.. currentmodule:: gammapy.catalog

.. autoclass:: SourceCatalogObject3FGL
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SourceCatalogObject3FGL.energy_range
      ~SourceCatalogObject3FGL.flux_points
      ~SourceCatalogObject3FGL.index
      ~SourceCatalogObject3FGL.is_pointlike
      ~SourceCatalogObject3FGL.lightcurve
      ~SourceCatalogObject3FGL.name
      ~SourceCatalogObject3FGL.position
      ~SourceCatalogObject3FGL.spectral_model

   .. rubric:: Methods Summary

   .. autosummary::

      ~SourceCatalogObject3FGL.info
      ~SourceCatalogObject3FGL.pprint
      ~SourceCatalogObject3FGL.spatial_model

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_range
   .. autoattribute:: flux_points
   .. autoattribute:: index
   .. autoattribute:: is_pointlike
   .. autoattribute:: lightcurve
   .. autoattribute:: name
   .. autoattribute:: position
   .. autoattribute:: spectral_model

   .. rubric:: Methods Documentation

   .. automethod:: info
   .. automethod:: pprint
   .. automethod:: spatial_model
