docs/0.15/_sources/api/gammapy.catalog.SourceCatalogObject3FGL.rst.txt
SourceCatalogObject3FGL
=======================

.. currentmodule:: gammapy.catalog

.. autoclass:: SourceCatalogObject3FGL
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SourceCatalogObject3FGL.asso
      ~SourceCatalogObject3FGL.energy_range
      ~SourceCatalogObject3FGL.flux_points
      ~SourceCatalogObject3FGL.lightcurve
      ~SourceCatalogObject3FGL.name
      ~SourceCatalogObject3FGL.position
      ~SourceCatalogObject3FGL.row_index

   .. rubric:: Methods Summary

   .. autosummary::

      ~SourceCatalogObject3FGL.info
      ~SourceCatalogObject3FGL.sky_model
      ~SourceCatalogObject3FGL.spatial_model
      ~SourceCatalogObject3FGL.spectral_model

   .. rubric:: Attributes Documentation

   .. autoattribute:: asso
   .. autoattribute:: energy_range
   .. autoattribute:: flux_points
   .. autoattribute:: lightcurve
   .. autoattribute:: name
   .. autoattribute:: position
   .. autoattribute:: row_index

   .. rubric:: Methods Documentation

   .. automethod:: info
   .. automethod:: sky_model
   .. automethod:: spatial_model
   .. automethod:: spectral_model
